# trz7

./: configure.ac  skin.py
data/: Makefile.am  setup.xml  skin.xml
lib/dvb/: db.cpp  db.cpp~  db.h  db.h~
lib/gdi/: gfbdc.cpp
lib/gui/: Makefile.am~  egauge.cpp
lib/python/: Makefile.am  enigma_python.i
lib/python/Blackhole/: BhAddons.py  BhBlue.py  BhEI.py  BhEpgPanel.py  BhEpgPanel.py~  BhEpgSearch.py  BhEpgSearch.py~  BhGreen.py  BhGreen.py~  BhHdd.py  BhHdd.py~  BhInadyn.py  BhInadyn.py~  BhInfo.py  BhInfo.py~  BhInterface.py  BhInterface.py~  BhNet.py  BhNet.py~  BhRed.py  BhRed.py~  BhScript.py  BhScript.py~  BhSettings.py  BhSwap.py  BhSwap.py~  BhUtils.py  Makefile.am  Makefile.am~  __init__.py
lib/python/Components/: Makefile.am  Makefile.am~  ServiceList.py  UsageConfig.py
lib/python/Components/Renderer/: Makefile.am~
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/BhEpgBackup/: plugin.py
lib/python/Plugins/Extensions/BhFastEpg/: Makefile.am~
lib/python/Plugins/Extensions/BhFullBackup/: Makefile.am  Makefile.am~  plugin.py
lib/python/Plugins/Extensions/BhPersonalBackup/: Makefile.am  plugin.py
lib/python/Plugins/Extensions/BhPersonalBackup/icons/: Makefile.am  Makefile.am~
lib/python/Plugins/Extensions/BhWeather/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/BlackHoleApi/: Makefile.am
lib/python/Screens/: ScanSetup.py
lib/service/: listboxservice.cpp  listboxservice.h
main/: enigma.cpp
tools/: enigma2.sh.in
(+3 files in other folders)
